--- a/Spring05/pom.xml
+++ b/Spring05/pom.xml
@@ -15,7 +15,25 @@
             <artifactId>cglib</artifactId>
             <version>2.2.2</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.aspectj/aspectjweaver -->
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>1.8.9</version>
+        </dependency>
+
+        <!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.2.4.RELEASE</version>
+        </dependency>
+
+
+
     </dependencies>
+
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
